# f1nndressup

./: .gitignore  .prettierrc  pyproject.toml
dressup/: __init__.py  __main__.py  admin.py  app.py  auth.py  config.template.py  create.py  database.py  schedule.py
dressup/models/: __init__.py  category.py  poll.py
dressup/routes/: __init__.py  auth.py  base.py
dressup/static/: dressup.js  style.css
dressup/templates/: base.html.j2  create.html.j2  index.html.j2  poll.html.j2
