[tool.poetry]
name = "dressup"
version = "0.1.0"
description = ""
authors = ["Jennifer Chan <jenchanws@gmail.com>"]
readme = "README.md"
packages = [
  {include = "dressup"}
]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-SSE = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
